Change project names

--- a/src/Repl/Repl.csproj
+++ b/src/Repl/Repl.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Compiler\Compiler.csproj" />
+    <ProjectReference Include="..\Compiler\Core.csproj" />
   </ItemGroup>
 
 </Project>
