--- a/tests/Compiler.Tests/Core.Tests.csproj
+++ b/tests/Compiler.Tests/Core.Tests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Compiler\Compiler.csproj" />
+    <ProjectReference Include="..\..\src\Compiler\Core.csproj" />
   </ItemGroup>
 
 </Project>
