Add support for multiple files

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,7 +20,7 @@
                 "--project",
                 "${workspaceFolder}/src/Compiler/Compiler.csproj",
                 "--",
-                "${file}"
+				"${fileDirname}"
             ],
             "presentation": {
                 "echo": true,
